--- a/catalog_app/templates/catalog_app/contacts.html
+++ b/catalog_app/templates/catalog_app/contacts.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-    <h1 class="display-4">Контакты</h1>
+    <h1 class="display-4">{{ title }}</h1>
 </div>
 
 <div class="container">
