--- a/catalog_app/templates/catalog_app/product_form.html
+++ b/catalog_app/templates/catalog_app/product_form.html
@@ -6,17 +6,17 @@
 
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-    <h1 class="display-4">Каталог</h1>
+    <h1 class="display-4">{{ title }}</h1>
 
 </div>
 <div class="container">
 
     <div class="row text-center">
         {% for object in object_list %}
-        <div class="col-3">
+        <div class="col-5" style="margin-left: 330px">
             <div class="card mb-4 box-shadow">
                 <div>
-                    <img src="{{ object.image|media_path }}" style="width: 250px;height: 150px"/></img>
+                    <img src="{{ object.image|media_path }}" style="width: 250px;height: 250px"/></img>
                 </div>
                 <div class="card-header">
                     <h4 class="my-0 font-weight-normal">{{ object.name }}</h4>
@@ -24,9 +24,8 @@
                 <div class="card-body">
                     <h1 class="card-title pricing-card-title">{{ object.price }} руб.</h1>
                     <ul class="list-unstyled mt-3 mb-4 text-start m-3">
-                        <li>{{ object.desc|truncatechars:80 }} </li>
+                        <li>{{ object.desc|truncatechars:80 }}</li>
                     </ul>
-                    <button type="button" class="btn btn-lg btn-block btn-outline-primary">Посмотреть</button>
                 </div>
             </div>
         </div>
