--- a/catalog_app/templates/catalog_app/includes/inc_catalog_menu.html
+++ b/catalog_app/templates/catalog_app/includes/inc_catalog_menu.html
@@ -1,9 +1,9 @@
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
     <h5 class="my-0 mr-md-auto font-weight-normal">{{ title }}</h5>
     <nav class="ms-5">
-        <a class="p-2 btn btn-outline-primary" href="/">Главная</a>
-        <a class="p-2 btn btn-outline-primary" href="/categories/">Категории</a>
-        <a class="p-2 btn btn-outline-primary" href="/product/">Продукт</a>
-        <a class="p-2 btn btn-outline-primary" href="/contacts/">Контакты</a>
+        <a class="p-2 btn btn-success" href={% url 'catalog_app:index' %}>Главная</a>
+        <a class="p-2 btn btn-outline-primary" href="{% url 'catalog_app:categories' %}">Категории</a>
+        <a class="p-2 btn btn-outline-secondary" href="{% url 'blog_app:list' %}">Блоги</a>
+        <a class="p-2 btn btn-info" href="/contacts/">Контакты</a>
     </nav>
 </div>
