--- a/catalog_app/templates/catalog_app/product_confirm_delete.html
+++ b/catalog_app/templates/catalog_app/product_confirm_delete.html
@@ -13,16 +13,11 @@
                     <div class="card">
                         <div class="card-body">
                             <form method="post">
-                                {% csrf_token %}
-                                {{ form.as_p }}
-                                <button type="submit" class="btn btn-success">
-                                    {% if object %}
-                                        Сохранить
-                                    {% else %}
-                                        Создать
-                                    {% endif %}
-                                </button>
-                            </form>
+                        {% csrf_token %}
+                        <p>Хотите удалить продукт "{{ object.name }}"?</p>
+                        <button type="submit" class="btn btn-danger">Да</button>
+                        <a href="{% url 'catalog_app:index' %}" class="btn btn-warning">Нет</a>
+                    </form>
                         </div>
                     </div>
                 </div>
