Решил вопрос с необходимостью отображения картинки в блоге.

--- a/blog_app/templates/blog_app/blog_detail.html
+++ b/blog_app/templates/blog_app/blog_detail.html
@@ -28,9 +28,11 @@
                         </table>
                     </div>
                 </div>
+                {% if object.image %}
                 <div class="col-6">
                     <img src="/media/{{ object.image }}"/>
                 </div>
+                {% endif %}
             </div>
         </div>
     </div>
