--- a/catalog_app/templates/catalog_app/includes/inc_catalog_menu.html
+++ b/catalog_app/templates/catalog_app/includes/inc_catalog_menu.html
@@ -5,5 +5,6 @@
         <a class="p-2 btn btn-outline-primary" href="{% url 'catalog_app:categories' %}">Категории</a>
         <a class="p-2 btn btn-outline-secondary" href="{% url 'blog_app:list' %}">Блоги</a>
         <a class="p-2 btn btn-info" href="/contacts/">Контакты</a>
+        <a class="p-2 btn btn-dark" href="/admin/">Admins</a>
     </nav>
 </div>
