--- a/catalog_app/templates/catalog_app/includes/inc_catalog_menu.html
+++ b/catalog_app/templates/catalog_app/includes/inc_catalog_menu.html
@@ -4,7 +4,7 @@
         <a class="p-2 btn btn-success" href={% url 'catalog_app:index' %}>Главная</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'catalog_app:categories' %}">Категории</a>
         <a class="p-2 btn btn-outline-secondary" href="{% url 'blog_app:list' %}">Блоги</a>
-        <a class="p-2 btn btn-info" href="/contacts/">Контакты</a>
+        <a class="p-2 btn btn-info" href="{% url 'catalog_app:contacts' %}">Контакты</a>
         <a class="p-2 btn btn-dark" href="/admin/">Admins</a>
     </nav>
 </div>
