--- a/catalog_app/templates/catalog_app/product_detail.html
+++ b/catalog_app/templates/catalog_app/product_detail.html
@@ -23,7 +23,7 @@
                                 </tr>
                                 <tr>
                                     <td>Стоимость</td>
-                                    <td>{{ object.price }}</td>
+                                    <td>{{ object.price }} руб.</td>
                                 </tr>
                             </table>
                         </div>
@@ -31,7 +31,7 @@
                     </div>
                 </div>
                 <div class="col-6">
-                    <img src="/media/{{ object.image }}"/>
+                    <img src="/media/{{ object.image }}" style="height: 300px"/></img>
                 </div>
             </div>
         </div>
