--- a/catalog_app/templates/catalog_app/product_list.html
+++ b/catalog_app/templates/catalog_app/product_list.html
@@ -16,7 +16,7 @@
             <div class="col-3">
                 <div class="card mb-4 box-shadow">
                     <div>
-                        <img src="{{ object.image|media_path }}" style="width: 150px;height: 150px"/></img>
+                        <img src="{{ object.image|media_path }}" style="height: 150px"/></img>
                     </div>
                     <div class="card-header">
                         <h4 class="my-0 font-weight-normal">{{ object.name|title }}</h4>
