--- a/catalog_app/templates/catalog_app/vegetables_list.html
+++ b/catalog_app/templates/catalog_app/vegetables_list.html
@@ -5,10 +5,10 @@
 {% block content %}
 
 
-    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-        <h1 class="display-4">{{ title }}</h1>
-
-    </div>
+{#    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">#}
+{#        <h1 class="display-4">{{ title }} {{ object.name }}</h1>#}
+{##}
+{#    </div>#}
     <div class="container">
 
     <div class="row text-center">
@@ -16,7 +16,7 @@
             <div class="col-3">
                 <div class="card mb-4 box-shadow">
                     <div>
-                        <img src="{{ object.image|media_path }}" style="width: 150px;height: 150px"/></img>
+                        <img src="{{ object.image|media_path }}" style="height: 150px"/></img>
                     </div>
                     <div class="card-header">
                         <h4 class="my-0 font-weight-normal">{{ object.name|title }}</h4>
