--- a/catalog_app/templates/catalog_app/vegetables_list.html
+++ b/catalog_app/templates/catalog_app/vegetables_list.html
@@ -5,10 +5,10 @@
 {% block content %}
 
 
-{#    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">#}
-{#        <h1 class="display-4">{{ title }} {{ object.name }}</h1>#}
-{##}
-{#    </div>#}
+    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+        <h1 class="display-4">{{ title }} {{ object.name }}</h1>
+
+    </div>
     <div class="container">
 
     <div class="row text-center">
