--- a/blog_app/templates/blog_app/blog_detail.html
+++ b/blog_app/templates/blog_app/blog_detail.html
@@ -29,9 +29,9 @@
                     </div>
                 </div>
                 {% if object.image %}
-                <div class="col-6">
-                    <img src="/media/{{ object.image }}"/>
-                </div>
+                    <div class="col-6">
+                        <img src="/media/{{ object.image }}" style="height: 300px"/></img>
+                    </div>
                 {% endif %}
             </div>
         </div>
