--- a/catalog_app/templates/catalog_app/product_form.html
+++ b/catalog_app/templates/catalog_app/product_form.html
@@ -8,11 +8,11 @@
     </div>
     <div class="container">
         <div class="col-12">
-            <div class="row">
-                <div class="col-6">
-                    <div class="card">
-                        <div class="card-body">
-                            <form method="post" enctype="multipart/form-data">
+            <form method="post" enctype="multipart/form-data">
+                <div class="row">
+                    <div class="col-6">
+                        <div class="card">
+                            <div class="card-body">
                                 {% csrf_token %}
                                 {{ form.as_p }}
                                 <button type="submit" class="btn btn-success">
@@ -22,9 +22,31 @@
                                         Создать
                                     {% endif %}
                                 </button>
-                            </form>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="card">
+                            <div class="card-header">
+                                <h3 class="card-title">
+                                    Версия продукта
+                                </h3>
+                            </div>
+                            <div class="card-body">
+                                {{ formset.management_form }}
+                                {% for form in formset.forms %}
+                                    {{ form.as_p }}
+                                    {% if not forloop.last %}
+                                        <hr>
+                                    {% endif %}
+                                {% endfor %}
+                            </div>
+                            <div class="card-footer"></div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </form>
+        </div>
+    </div>
 {% endblock %}
