--- a/catalog_app/templates/catalog_app/product_list.html
+++ b/catalog_app/templates/catalog_app/product_list.html
@@ -3,69 +3,70 @@
 {% load static %}
 {% load my_tags %}
 {% block content %}
-    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-        <h1 class="display-4">{{ title }}</h1>
-        <dev class="col-12 mb-5">
-            <a class="btn btn-outline-primary" href="{% url 'catalog_app:create_product' %}">Добавить продукт</a>
-        </dev>
-    </div>
-    <div class="container">
+<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+    <h1 class="display-4">{{ title }}</h1>
+    <dev class="col-12 mb-5">
+        <a class="btn btn-outline-primary" href="{% url 'catalog_app:create_product' %}">Добавить продукт</a>
+    </dev>
+</div>
+<div class="container">
 
     <div class="row text-center">
         {% for object in object_list %}
-            <div class="col-3">
-                <div class="card mb-4 box-shadow">
-                    <div>
-                        <img src="{{ object.image|media_path }}" style="height: 150px"/></img>
-                    </div>
-                    <div class="card-header">
-                        <h4 class="my-0 font-weight-normal">{{ object.name|title }}</h4>
-                    </div>
-                    <div class="card-body">
-                        <h1 class="card-title pricing-card-title">{{ object.price }} руб.</h1>
-                        <ul class="list-unstyled mt-3 mb-4 text-start m-3">
-                            <li>{{ object.desc|truncatechars:80 }} </li>
-                        </ul>
-                        <br>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div class="btn-group">
-                                <a href="{% url 'catalog_app:view_product' object.pk %}"
-                                   class="btn btn-sm btn-outline-secondary">Прос.</a>
+        <div class="col-3">
+            <div class="card mb-4 box-shadow">
+                <div>
+                    <img src="{{ object.image|media_path }}" style="height: 150px"/></img>
+                </div>
+                <div class="card-header">
+                    <h4 class="my-0 font-weight-normal">{{ object.name|title }}</h4>
+                </div>
+                <div class="card-body">
+                    <h1 class="card-title pricing-card-title">{{ object.price }} руб.</h1>
+                    <ul class="list-unstyled mt-3 mb-4 text-start m-3">
+                        <li>{{ object.desc|truncatechars:80 }}</li>
+                    </ul>
+                    <br>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="btn-group">
+                            <a href="{% url 'catalog_app:view_product' object.pk %}"
+                               class="btn btn-sm btn-outline-secondary">Прос.</a>
 
-                                <a href="{% url 'catalog_app:update_product' object.pk %}" type="button"
-                                   class="btn btn-sm btn-outline-secondary">Ред.</a>
+                            <a href="{% url 'catalog_app:update_product' object.pk %}" type="button"
+                               class="btn btn-sm btn-outline-secondary">Ред.</a>
 
-                                <a href="{% url 'catalog_app:delete_product' object.pk %}" type="button"
-                                   class="btn btn-sm btn-outline-danger">Удал.</a>
-                            </div>
+                            <a href="{% url 'catalog_app:delete_product' object.pk %}" type="button"
+                               class="btn btn-sm btn-outline-danger">Удал.</a>
                         </div>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div class="card-footer">
-                                <td>Поставщик:</td>
-                                <div class="btn-group">
-                                    <a href="{% url 'catalog_app:create_provider' object.pk %}" type="button"
-                                       class="btn btn-sm btn-outline-secondary">Доб.</a>
-                                    <a href="{% url 'catalog_app:update_provider' object.pk %}" type="button"
-                                       class="btn btn-sm btn-outline-secondary">Изм.</a>
-                                </div>
-                            </div>
-
-                        </div>
+                    </div>
+                    <div class="d-flex justify-content-between align-items-center">
                         <div class="card-footer">
-                            <a href="{% url 'order_app:order_create' object.pk %}" class="btn btn-outline-success">Оставить
-                                заявку</a>
+                            Поставщик:
+                            <div class="btn-group">
+                                <a href="{% url 'catalog_app:create_provider' object.pk %}" type="button"
+                                   class="btn btn-sm btn-outline-secondary">Доб.</a>
+                                <a href="{% url 'catalog_app:update_provider' object.pk %}" type="button"
+                                   class="btn btn-sm btn-outline-secondary">Изм.</a>
+                            </div>
                         </div>
+
+                    </div>
+                    <div class="card-footer">
+                        <a href="{% url 'order_app:order_create' object.pk %}" class="btn btn-outline-success">Оставить
+                            заявку</a>
                         {% for version_item in object.version_set.all %}
-                            {% if version_item.is_actual %}
-                                <div class="col" align="center" style="margin-top:5px">
-                                    <p>Актуальная версия: {{ version_item.version_name }}</p>
-                                </div>
-                            {% endif %}
+                        {% if version_item.is_actual %}
+                        <div class="card-footer">
+                            <p>Версия: {{ version_item.version_name }}.<br>
+                                Номер: {{ version_item.version_number }}.</p>
+                        </div>
+                        {% endif %}
                         {% endfor %}
                     </div>
                 </div>
             </div>
+        </div>
         {% endfor %}
     </div>
 
-{% endblock content %}
+    {% endblock content %}
