Начал делать авторизацию. Нет - часть 2. и всего 3.

--- a/catalog_app/templates/catalog_app/contacts.html
+++ b/catalog_app/templates/catalog_app/contacts.html
@@ -13,15 +13,11 @@
                     <table class="table table-striped">
                         <tr>
                             <td class="w-25">Страна</td>
-                            <td>USA</td>
-                        </tr>
-                        <tr>
-                            <td class="w-25">ИНН</td>
-                            <td>91-1144442</td>
+                            <td>Россия</td>
                         </tr>
                         <tr>
                             <td class="w-25">Адрес</td>
-                            <td>Redmond,WA,98052-6399</td>
+                            <td>Москва</td>
                         </tr>
                     </table>
                 </div>
