--- a/catalog_app/templates/catalog_app/product_list.html
+++ b/catalog_app/templates/catalog_app/product_list.html
@@ -41,7 +41,7 @@
                     </div>
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="card-footer">
-                            Поставщик:
+                            Поставщик: {{ object.vender }}
                             <div class="btn-group">
                                 <a href="{% url 'catalog_app:create_provider' object.pk %}" type="button"
                                    class="btn btn-sm btn-outline-secondary">Доб.</a>
