--- a/users_app/templates/users_app/login.html
+++ b/users_app/templates/users_app/login.html
@@ -14,6 +14,7 @@
                         {% csrf_token %}
                         {{ form.as_p }}
                         <button type="submit" class="btn btn-success">Войти</button>
+                        <a href="{% url 'users_app:password_reset' %}" class="btn btn-mute"> Сброс пароля </a>
                     </div>
                     <div class="card-footer"></div>
                 </div>
