--- a/users_app/templates/users_app/password_reset_form.html
+++ b/users_app/templates/users_app/password_reset_form.html
@@ -1,8 +1,8 @@
 {% extends 'catalog_app/base.html' %}
 {% block content %}
-<div class="col">
+    <div class="col">
     <form class="row" method="post" enctype="multipart/form-data">
-      <div class="col-3"></div>
+        <div class="col-3"></div>
         <div class="col-6">
             <div class="card">
                 <div class="card-header">
@@ -11,12 +11,12 @@
                 <div class="card-body">
                     {% csrf_token %}
                     {{ form.as_p }}
-                    <button type="submit" class="btn btn-success"> Сбросить пароль </button>
+                    <button type="submit" class="btn btn-success"> Сбросить пароль</button>
+                    <a href="{% url 'users_app:generate_new_password' %}" class="btn btn-danger">Сгенерировать
+                        пароль</a>
                     <a class="btn btn-outline-dark" href="{% url 'users_app:login' %}"> Отмена </a>
                 </div>
+                <div class="card-footer"></div>
             </div>
-        </div>
     </form>
-
-</div>
 {% endblock %}
