Добавил возможность восстановление пароля рамдомным методом.

--- a/users_app/templates/users_app/random_password_form.html
+++ b/users_app/templates/users_app/random_password_form.html
@@ -11,9 +11,7 @@
                 <div class="card-body">
                     {% csrf_token %}
                     {{ form.as_p }}
-                    <button type="submit" class="btn btn-success"> Сбросить пароль</button>
-                    <a href="{% url 'users_app:random_password_form' %}" class="btn btn-danger">Сгенерировать
-                        пароль</a>
+                    <button type="submit" class="btn btn-danger">Сгенерировать пароль</button>
                     <a class="btn btn-outline-dark" href="{% url 'users_app:login' %}"> Отмена </a>
                 </div>
                 <div class="card-footer"></div>
