--- a/users_app/templates/users_app/recover_password.html
+++ b/users_app/templates/users_app/recover_password.html
@@ -9,8 +9,8 @@
                     <h3 class="card-title">Сброс пароля</h3>
                 </div>
                 <div class="card-body">
-                    <a> На ваш email отправлен новый пароль </a>
-                    <a href="{% url 'users_app:login' %}" class="btn btn-primary"> Перейти на страницу авторизации </a>
+                    <a> На ваш email отправлен новый пароль.</a><br>
+                    <a href="{% url 'users_app:login' %}" class="btn btn-success">Перейти на страницу авторизации </a>
                 </div>
             </div>
         </div>
