--- a/users_app/templates/users_app/user_form.html
+++ b/users_app/templates/users_app/user_form.html
@@ -16,7 +16,7 @@
                         <button type="submit" class="btn btn-success">Сохранить</button>
                     </div>
                     <div class="card-footer">
-                        <a href="{% url 'users_app:generate_new_password' %}" class="btn btn-danger">Сгенерировать пароль</a>
+                        <a href="{% url 'users_app:generate_old_password' %}" class="btn btn-danger">Сгенерировать пароль</a>
                     </div>
                 </div>
         </form>
