--- a/catalog_app/templates/catalog_app/includes/inc_catalog_menu.html
+++ b/catalog_app/templates/catalog_app/includes/inc_catalog_menu.html
@@ -10,9 +10,11 @@
     <nav class="ms-5">
         <a class="p-2 btn btn-success" href={% url 'catalog_app:index' %}>Главная</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'catalog_app:categories' %}">Категории</a>
-        <a class="p-2 btn btn-outline-secondary" href="{% url 'blog_app:list' %}">Блоги</a>
+        <a class="p-2 btn btn-warning" href="{% url 'blog_app:list' %}">Блоги</a>
         <a class="p-2 btn btn-info" href="{% url 'catalog_app:contacts' %}">Контакты</a>
-
+        <a class="p-2 btn btn-outline-warning" href="{% url 'mailing_app:mailing_list' %}">Рассылки</a>
+        <a class="p-2 btn btn-outline-warning" href="{% url 'mailing_app:buyers' %}">Покупатели</a>
+        <a class="p-2 btn btn-outline-warning" href="{% url 'mailing_app:messages' %}">Сообщения</a>
 
         {% if user.is_authenticated %}
             <a class="p-2 btn btn-dark" href="{% url 'users_app:profile' %}">Профиль</a>
