--- a/mailing_app/templates/mailing_app/buyer_confirm_delete.html
+++ b/mailing_app/templates/mailing_app/buyer_confirm_delete.html
@@ -1,10 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'catalog_app/base.html' %}
 
-</body>
-</html>
+{% load static %}
+{% load my_tags %}
+{% block content %}
+<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+    <h1 class="display-4">Удаление покупателя</h1>
+</div>
+<div class="container">
+    <div class="col-12">
+        <div class="row">
+            <div class="col-6">
+                <div class="card">
+                    <div class="card-body">
+                        <form method="post">
+                            {% csrf_token %}
+                            <p>Хотите удалить покупателя "{{ object }}"?</p>
+                            <button type="submit" class="btn btn-danger">Да</button>
+                            <a href="{% url 'mailing_app:buyers' %}" class="btn btn-warning">Нет</a>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endblock %}
