--- a/mailing_app/templates/mailing_app/mailingmessage_list.html
+++ b/mailing_app/templates/mailing_app/mailingmessage_list.html
@@ -1,10 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'catalog_app/base.html' %}
+{% load static %}
+{% block content %}
+<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+    <h1 class="display-4">Список сообщений</h1>
+    <dev class="col-12 mb-5">
+        <a class="btn btn-outline-primary" href="{% url 'mailing_app:messages_create' %}">Добавить сообщение</a>
+    </dev>
+</div>
+<div class="container">
+    <div class="row text-center">
+        {% for object in object_list %}
+        <div class="col-md-4">
+            <div class="card mb-4 box-shadow">
+                <div class="card-body">
+                    <p class="card-text">
+                        {{ object }}
+                    </p>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="btn-group">
+                            <a href="{% url 'mailing_app:messages_update' object.pk %}" type="button"
+                               class="btn btn-sm btn-outline-secondary">Редактирование</a>
+                            <a href="{% url 'mailing_app:messages_delete' object.pk %}" type="button"
+                               class="btn btn-sm btn-outline-danger">Удаление</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
 
-</body>
-</html>
+    {% endblock %}
