--- a/app_catalog/templates/app_catalog/includes/inc_catalog_menu.html
+++ b/app_catalog/templates/app_catalog/includes/inc_catalog_menu.html
@@ -10,7 +10,7 @@
     <nav class="ms-5">
         <a class="p-2 btn btn-success" href="{% url 'app_catalog:index' %}">Главная</a>
         <a class="p-2 btn btn-outline-success" href="{% url 'app_mailing:sends_and_blogs' %}">Рассылки и блоги</a>
-        <!--        <a class="p-2 btn btn-outline-primary" href="{% url 'app_catalog:categories' %}">Категории</a>-->
+        <a class="p-2 btn btn-outline-primary" href="{% url 'app_catalog:categories' %}">Категории</a>
         <!--        <a class="p-2 btn btn-warning" href="{% url 'app_blog:list' %}">Блоги</a>-->
         <!--        <a class="p-2 btn btn-info" href="{% url 'app_catalog:contacts' %}">Контакты</a>-->
         <!--        <a class="p-2 btn btn-outline-warning" href="{% url 'app_mailing:mailing_list' %}">Рассылки</a>-->
