--- a/app_mailing/templates/app_mailing/mailingsettings_list.html
+++ b/app_mailing/templates/app_mailing/mailingsettings_list.html
@@ -40,8 +40,7 @@
                     </div>
                     <div class="card-footer">
                         <a href="{% url 'app_mailing:mailing_update' item.pk %}" class="btn btn-primary float-end">Редактирование</a>
-                        <a href="{% url 'app_mailing:mailing_buyer' item.pk %}" class="btn btn-primary float-end">Клиенты
-                            рассылки</a>
+                        <a href="{% url 'app_mailing:mailing_buyer' item.pk %}" class="btn btn-primary float-end">Клиенты рассылки</a>
                         <a href="{% url 'app_mailing:mailing_delete' item.pk %}" class="btn btn-primary float-end">Удаление</a>
                     </div>
                 </div>
